--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -54,7 +54,8 @@
 \include{results}
 \include{conclusion}
 
-\bibliographystyle{apalike}
+\bibliographystyle{ieeetr}
+%\bibliographystyle{apalike}
 %\bibliographystyle{abbrvnat}
 %\bibliographystyle{abbrv}
 \bibliography{library}
