--- a/doc/thesis/library.bib
+++ b/doc/thesis/library.bib
@@ -8,12 +8,15 @@ tau\_f = 2.46 +- .25
 tau\_0 = .98 +- .25
 alpha = .33 +- .45
 E\_0 = .34 +- .1
+
         
 Worth reading again
 
+        
 epsilon: .54, .59, .49
 tau\_s   : 1.54, 1.38, 1.7
-},
+
+      },
 author = {Hu, Zhenghui and Zhao, Xiaohu and Liu, Huafeng and Shi, Pengcheng},
 doi = {10.1155/2009/215409},
 file = {:home/micahc/Documents/papers/Hu et al./EURASIP Journal on Advances in Signal Processing/Hu et al. - 2009 - Nonlinear Analysis of the BOLD Signal.pdf:pdf},
@@ -154,8 +157,10 @@ year = {2007}
 @article{Riera2003,
 annote = {Feller,W., 1971. Probability theory and its applications, Second ed., vol. II Wiley, NY
 on why to use a wiener process
+
         
 -Puts all the equations together
+
         
 -Maximum Likelihood},
 author = {Riera, J J and Watanabe, J and Kazuki, I and Naoki, M and Aubert, E and Ozaki, T and Kawashima, R},
@@ -387,9 +392,11 @@ annote = {Use:
 Canonical Hemodynamic Function
 No Global Scaling
 Autoregressive instead of low pass
+
         
 Two Main Assumptions:
 -Gaussian independent noise
+
         
 Might be worth showing the difference in the activation maps between the true/mine/spm},
 author = {Della-Maggiore, V},
@@ -907,8 +914,10 @@ title = {{A Comparison of Marginal Likelihood Computational Methods}}
 }
 @article{Obata2004,
 annote = {Discusses the tradeoff between lagged CBV normalization and CMRO2
+
         
 The flow responses in SMA and M1 were similar, but the BOLD response was quite different
+
         
 Derives the readout (fix for the Buxton) equation},
 author = {Obata, T},
@@ -1465,7 +1474,9 @@ Significantly more complicated mode (pg 622)
 doesn't significantly improve post stimulus undershoot
 -metabolic demand is essentially a free timeseries, (pg 629)
 -a model with neural habituation would be a better fit - CMRO2 is essentially a model for u
+
         
+
       },
 author = {Zheng, Y and Martindale, J and Johnston, D and Jones, M and Berwick, J and Mayhew, J},
 file = {:home/micahc/Documents/papers/Zheng et al./Neuroimage/Zheng et al. - 2002 - A model of the hemodynamic response and oxygen delivery to brain.pdf:pdf},
@@ -2352,7 +2363,7 @@ doi = {10.1016/j.neuroimage.2004.11.008},
 file = {:home/micahc/Documents/papers/Wager et al./NeuroImage/Wager et al. - 2005 - Accounting for nonlinear BOLD effects in fMRI parameter estimates and a model for prediction in rapid event-related studies.pdf:pdf},
 issn = {1053-8119},
 journal = {NeuroImage},
-keywords = {Adolescent,Adult,Artifacts,Brain Mapping,Dominance, Cerebral,Dominance, Cerebral: physiology,Evoked Potentials,Evoked Potentials: physiology,Female,Hemodynamics,Hemodynamics: physiology,Humans,Image Enhancement,Image Processing, Computer-Assisted,Image Processing, Computer-Assisted: statistics \& numerical data,Individuality,Linear Models,Magnetic Resonance Imaging,Magnetic Resonance Imaging: statistics \& numerical data,Male,Motor Cortex,Motor Cortex: physiology,Nonlinear Dynamics,Oxygen,Oxygen: blood,Psychomotor Performance,Psychomotor Performance: physiology,Reference Values,Reproducibility of Results,Visual Cortex,Visual Cortex: physiology},
+keywords = {Adolescent,Adult,Artifacts,Brain Mapping,Dominance, Cerebral,Dominance, Cerebral: physiology,Evoked Potentials,Evoked Potentials: physiology,Female,Hemodynamics,Hemodynamics: physiology,Humans,Image Enhancement,Image Processing, Computer-Assisted,Image Processing, Computer-Assisted: statistics \& ,Individuality,Linear Models,Magnetic Resonance Imaging,Magnetic Resonance Imaging: statistics \& numerical,Male,Motor Cortex,Motor Cortex: physiology,Nonlinear Dynamics,Oxygen,Oxygen: blood,Psychomotor Performance,Psychomotor Performance: physiology,Reference Values,Reproducibility of Results,Visual Cortex,Visual Cortex: physiology},
 month = mar,
 number = {1},
 pages = {206--18},
